Fixed spacing between navigation and sitetitle

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:hover {
 	height: 29px;
 	display: block;
 	position: absolute;
-	top: 50px;
+	top: 58px;
 	left: 23px;
 }
 #navigation a {
